додала класи в portfolio

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,59 @@ logo{
     color: var(--title-text-color);
 }
 
+.header {
+}
+.header-logo {
+}
+.header-nav {
+}
+.header-list {
+}
+.header-item {
+}
+.contacts {
+}
+.header-mail {
+}
+.header-tel {
+}
+.main {
+}
+.main-title {
+}
+.main-btn {
+}
+.about {
+}
+.about-catalog {
+}
+.about-list {
+}
+.about-title {
+}
+.about-text {
+}
+.product {
+}
+.product-title {
+}
+.product-catalog {
+}
+.product-item {
+}
+.team {
+}
+.team-title {
+}
+.team-catalog {
+}
+.team-item {
+}
+.team-tit {
+}
+.team-text {
+}
+.footer-logo {
+}
+.footer-text {
+}
