--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ logo{
     color: #2E2F42;
 }
 
-.header-link: {
+.header-link {
     font-family: 'Roboto';
     font-weight: 600;
     font-size: 16px;
